Refactored code to improve style and clarity.
This commit includes the following changes:
- Replaced explicit `findViewById` casts with inferred types.
- Made local variables and fields `final` where applicable.
- Simplified boolean expressions and returns.
- Used `StandardCharsets.UTF_8` instead of catching `UnsupportedEncodingException`.
- Replaced `new String()` with string literals.
- Replaced `new StringBuilder()` with string concatenation.
- Used `System.arraycopy()` for more efficient array copying.
- Replaced `new Long()` with `Long.valueOf()`.
- Changed button background tint to use color resources instead of hardcoded values.
- Removed redundant `return` statements.
- Removed unused `google-services.json.template` file.